# umap

./: .coveragerc  .gitignore  .pep8speaks.yml  .readthedocs.yaml  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.txt  Makefile  README.md  README.rst  appveyor.yml  azure-pipelines.yml  chunked_parallel_benchmark_report_valerio_macbook_CPU.txt  chunked_parallel_benchmark_report_workaround590_valerio_macbook_CPU.txt  docs_requirements.txt  paper.bib  paper.md  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  umap_extend.cpp  xsrandom.cpp  xsrandom.hpp
benchmarks/: bench_adjmat_vectorize.py  bench_fastmath_removal.py  bench_membership_strengths.py
ci_scripts/: install.sh  success.sh  test.sh
devel/: test.py
doc/: .gitignore  Makefile  aligned_umap_basic_usage.rst  aligned_umap_politics_demo.rst  api.rst  basic_usage.rst  benchmarking.rst  bokeh_digits_plot.py  clustering.rst  composing_models.rst  conf.py  densmap_demo.rst  doc_requirements.txt  document_embedding.rst  embedding_space.rst  exploratory_analysis.rst  faq.rst  how_umap_works.rst  index.rst  interactive_viz.rst  inverse_transform.rst  make.bat  mutual_nn_umap.rst  nomic_atlas_example.rst  nomic_atlas_umap_of_text_embeddings.rst  nomic_atlas_visualizing_mnist_training_dynamics.rst  outliers.rst  parameters.rst  parametric_umap.rst  performance.rst  plotting.rst  plotting_example_interactive.py  plotting_example_nomic_atlas.py  precomputed_k-nn.rst  release_notes.rst  reproducibility.rst  scientific_papers.rst  sparse.rst  supervised.rst  transform.rst  (+1 more)
doc/_templates/: breadcrumbs.html  layout.html  tda_links.html
examples/: README.txt  algorithm_comparison.py  galaxy10sdss.py  index_fit_example.py  inverse_transform_example.py  mnist_example.py  mnist_torus_sphere_example.py  mnist_transform_new_data.py  plot_algorithm_comparison.py  plot_fashion-mnist_example.py  plot_feature_extraction_classification.py  plot_mnist_example.py  torch_examples.ipynb
examples/digits/: digits.html  digits.py
examples/iris/: iris.html  iris.py
notebooks/: AnimatingUMAP.ipynb  MNIST_Landmarks.ipynb  SCRATCH_MNIST_Landmarks.ipynb  UMAP usage and parameters.ipynb  UMAP with Nomic Atlas.ipynb  nomic-atlas-umap-of-text-embeddings.ipynb  nomic-atlas-visualizing-mnist-training-dynamics.ipynb  precomputed_knn use cases.ipynb
notebooks/Parametric_UMAP/: 01.0-parametric-umap-mnist-embedding-basic.ipynb  01.0-parametric-umap-mnist-torch.ipynb  01.1-parametric-umap-mnist-tensorflow.ipynb  02.0-parametric-umap-mnist-embedding-convnet.ipynb  03.0-parametric-umap-mnist-embedding-convnet-with-reconstruction.ipynb  03.0-parametric-umap-mnist-with-reconstruction-and-autoencoding.ipynb  04.0-parametric-umap-mnist-embedding-convnet-with-autoencoder-loss.ipynb  04.0-parametric-umap-with-callback.ipynb  05.0-parametric-umap-global-loss.ipynb  (+4 more)
umap/: __init__.py  aligned_umap.py  curvature.py  distances.py  label_prop.py  layouts.py  nndescent.py  parametric_umap.py  plot.py  recusive_init.py  rp_tree.py  sparse.py  sparse_nndescent.py  spectral.py  torch.py  umap_.py  umap_utils.pyx  utils.py  validation.py
(+22 files in other folders)
