[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "umap-learn"
version = "0.5.11"
description = "Uniform Manifold Approximation and Projection"
readme = "README.rst"
license = {text = "BSD"}
keywords = ["dimension reduction", "umap", "t-sne", "manifold"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved",
    "Programming Language :: C",
    "Programming Language :: Python",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.9"
dependencies = [
    "numpy >= 1.23",
    "scipy >= 1.3.1",
    "scikit-learn >= 1.6",
    "numba >= 0.51.2",
    "pynndescent >= 0.5",
    "tqdm",
]

[[project.maintainers]]
name = "Leland McInnes"
email = "leland.mcinnes@gmail.com"

[project.urls]
Homepage = "http://github.com/lmcinnes/umap"
Repository = "http://github.com/lmcinnes/umap"

[project.optional-dependencies]
plot = [
    "pandas",
    "matplotlib",
    "datashader",
    "bokeh",
    "holoviews",
    "colorcet",
    "seaborn",
    "scikit-image",
    "dask",
]
parametric_umap = ["tensorflow >= 2.1"]
tbb = ["tbb >= 2019.0"]
test = ["pytest"]

[tool.setuptools]
packages = ["umap"]
zip-safe = false

[tool.setuptools.package-data]
"*" = ["*.pyx", "*.pxd"]
