[metadata]
name = umap-learn
maintainer = Leland McInnes
maintainer_email = leland.mcinnes@gmail.com
license = BSD
description = Uniform Manifold Approximation and Projection
keywords = dimension, reduction, t-sne, manifold
url = http://github.com/lmcinnes/umap
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    License :: OSI Approved
    Programming Language :: C
    Programming Language :: Python
    Topic :: Software Development
    Topic :: Scientific/Engineering
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.8

[options]
packages = umap
zip_safe = False
install_requires =
    numpy >= 1.13
    scikit-learn >= 0.20
    scipy >= 1.0
    numba >= 0.42, != 0.47
    tbb >= 2019.0
tests_require = nose
setup_requires = setuptools>=42; wheel; setuptools_scm[toml]>=3.4.3

[options.extras_require]
plot =
    matplotlib
    datashader
    bokeh
    holoviews
    seaborn
performance = pynndescent >= 0.4
